--- a/test/suites/test-workflows/combined-workflow-test.yaml
+++ b/test/suites/test-workflows/combined-workflow-test.yaml
@@ -4,6 +4,8 @@ metadata:
   name: artillery-workflow-suite-combined
   labels:
     core-tests: workflows-suite
+    type: suite
+    tool: artillery
 spec:
   steps:
   - execute:
