--- a/test/suites/test-workflows/curl-workflow.yaml
+++ b/test/suites/test-workflows/curl-workflow.yaml
@@ -4,6 +4,8 @@ metadata:
   name: curl-workflow-suite
   labels:
     core-tests: workflows-suite
+    type: suite
+    tool: curl
 spec:
   steps:
   - execute:
