--- a/test/suites/test-workflows/cypress-workflow.yaml
+++ b/test/suites/test-workflows/cypress-workflow.yaml
@@ -4,6 +4,8 @@ metadata:
   name: cypress-workflow-suite
   labels:
     core-tests: workflows-suite
+    type: suite
+    tool: cypress
 spec:
   steps:
   - execute:
