--- a/test/suites/test-workflows/junit-workflow.yaml
+++ b/test/suites/test-workflows/junit-workflow.yaml
@@ -4,6 +4,8 @@ metadata:
   name: junit-workflow-suite
   labels:
     core-tests: workflows-suite
+    type: suite
+    tool: junit
 spec:
   steps:
   - execute:
