--- a/test/suites/test-workflows/maven-workflow.yaml
+++ b/test/suites/test-workflows/maven-workflow.yaml
@@ -4,6 +4,8 @@ metadata:
   name: maven-workflow-suite
   labels:
     core-tests: workflows-suite
+    type: suite
+    tool: maven
 spec:
   steps:
   - execute:
