--- a/test/suites/test-workflows/pytest-workflow.yaml
+++ b/test/suites/test-workflows/pytest-workflow.yaml
@@ -4,6 +4,8 @@ metadata:
   name: pytest-workflow-suite
   labels:
     core-tests: workflows-suite
+    type: suite
+    tool: pytest
 spec:
   steps:
   - execute:
