--- a/test/jmeter/executor-tests/crd-workflow/smoke.yaml
+++ b/test/jmeter/executor-tests/crd-workflow/smoke.yaml
@@ -4,6 +4,7 @@ metadata:
   name: jmeter-workflow-smoke
   labels:
     core-tests: workflows
+    tool: jmeter
 spec:
   content:
     git:
@@ -34,6 +35,7 @@ metadata:
   name: jmeter-workflow-smoke-justb4-5.5
   labels:
     core-tests: workflows
+    tool: jmeter
 spec:
   content:
     git:
@@ -64,6 +66,7 @@ metadata:
   name: jmeter-workflow-smoke-shell-artifacts
   labels:
     core-tests: workflows
+    tool: jmeter
 spec:
   content:
     git:
@@ -95,6 +98,7 @@ metadata:
   name: jmeter-workflow-smoke-from-template
   labels:
     core-tests: workflows
+    tool: jmeter
 spec:
   content:
     git:
@@ -127,6 +131,7 @@ metadata:
   name: distributed-jmeter-workflow-smoke
   labels:
     core-tests: workflows
+    tool: jmeter
 spec:
   content:
     git:
@@ -179,6 +184,7 @@ metadata:
   name: distributed-jmeter-workflow-smoke-shell-artifacts
   labels:
     core-tests: workflows
+    tool: jmeter
 spec:
   content:
     git:
