--- a/test/suites/test-workflows/cron/dev/small-smoke-cron.yaml
+++ b/test/suites/test-workflows/cron/dev/small-smoke-cron.yaml
@@ -3,7 +3,8 @@ apiVersion: testworkflows.testkube.io/v1
 metadata:
   name: tw-suite-small-smoke-cron-trigger
   labels:
-    core-tests: workflows
+    core-tests: workflows-suite
+    type: suite
 spec:
   steps:
   - execute:
