--- a/test/suites/test-workflows/jmeter-workflow.yaml
+++ b/test/suites/test-workflows/jmeter-workflow.yaml
@@ -4,6 +4,8 @@ metadata:
   name: jmeter-workflow-suite
   labels:
     core-tests: workflows-suite
+    type: suite
+    tool: jmeter
 spec:
   steps:
   - execute:
