--- a/test/suites/test-workflows/playwright-workflow.yaml
+++ b/test/suites/test-workflows/playwright-workflow.yaml
@@ -4,6 +4,8 @@ metadata:
   name: playwright-workflow-suite
   labels:
     core-tests: workflows-suite
+    type: suite
+    tool: playwright
 spec:
   steps:
   - execute:
