fix; add env service flag
Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -10367,6 +10367,8 @@ components:
     EnvVar:
       type: object
       properties:
+        global:
+          $ref: "#/components/schemas/BoxedBoolean"    
         name:
           type: string
         value:
