--- a/test/playwright/executor-tests/crd-workflow/smoke.yaml
+++ b/test/playwright/executor-tests/crd-workflow/smoke.yaml
@@ -141,11 +141,15 @@ spec:
   - name: Install dependencies
     shell: "npm ci"
   - name: Run tests
-    shell: "mkdir /data/artifacts && npx playwright test --reporter=junit > /data/artifacts/junit-report.xml" # workaround - PLAYWRIGHT_JUNIT_OUTPUT_DIR and PLAYWRIGHT_JUNIT_OUTPUT_NAME are not working
+    run:
+      shell: "mkdir /data/artifacts && npx playwright test --reporter=list,junit"
+      env:
+      - name: PLAYWRIGHT_JUNIT_OUTPUT_NAME
+        value: "/data/artifacts/junit-report.xml"
     steps:
     - name: Save artifacts
-      workingDir: /data/artifacts
       artifacts:
+        workingDir: /data/artifacts/
         paths:
         - '**/*'
 ---
@@ -263,6 +267,7 @@ metadata:
   labels:
     core-tests: workflows
     tool: playwright
+description: "Distributed Playwright with `--shard` - 2 browsers/projects, so it may *seem* things are executed twice"
 spec:
   content:
     git:
@@ -278,11 +283,15 @@ spec:
     shell: 'npm install --save-dev @playwright/test@1.38.0 && npm ci'
   - name: Run tests
     parallel:
+      description: "Shard: {{ index + 1 }}/{{ count }}"
       count: 2
       transfer:
       - from: /data/repo
       run:
-        shell: 'mkdir /data/artifacts && npx playwright test --reporter=junit --shard {{ index + 1 }}/{{ count }} > /data/artifacts/junit-report{{ index + 1 }}.xml' 
+        shell: 'mkdir /data/artifacts && npx playwright test --reporter=list,junit --shard={{ index + 1 }}/{{ count }}' # 2 browsers/projects - may *seem* to be run twice while sharding
+        env:
+        - name: PLAYWRIGHT_JUNIT_OUTPUT_NAME
+          value: "/data/artifacts/junit-report-{{ index + 1 }}.xml"
       artifacts: # artifacts directly on parallel step
         workingDir: /data/artifacts/
         paths:
