--- a/test/cypress/executor-tests/crd-workflow/smoke.yaml
+++ b/test/cypress/executor-tests/crd-workflow/smoke.yaml
@@ -185,7 +185,7 @@ spec:
       - name: CYPRESS_CUSTOM_ENV
         value: CYPRESS_CUSTOM_ENV_value
       - name: CYPRESS_INSTALL_BINARY # Official image - skips download & verification to speed up startup
-        value: 1
+        value: "1"
       - name: CYPRESS_BROWSER_ARGS
         value: "--no-sandbox --disable-features=UseOzonePlatform" # Chrome flags - disable /dev/shm usage + features not available in containers to suppress their warnings
     steps:
