feat: add targets to triggers (#6283)
* feat: add targets to triggers

* fix: fix mapper

* chore: add workflow execution step targetting

* feat: add execution workflow targetting

* chore: move target to actionParams

* fix: address remarks

--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -8113,6 +8113,9 @@ components:
           $ref: "#/components/schemas/TestWorkflowConfigValue"
         tags:
           $ref: "#/components/schemas/TestWorkflowTagValue"
+        target:
+          $ref: "#/components/schemas/ExecutionTarget"
+
 
     TestTriggerConditionSpec:
       type: object
@@ -9622,6 +9625,8 @@ components:
           selector:
             $ref: "#/components/schemas/LabelSelector"
             description: label selector for test workflow
+          target:
+            $ref: "#/components/schemas/ExecutionTarget"
 
     TestWorkflowStepExecuteTestRef:
       type: object
@@ -10268,6 +10273,8 @@ components:
             type: string
         config:
           $ref: "#/components/schemas/TestWorkflowConfigValue"
+        target:
+          $ref: "#/components/schemas/ExecutionTarget"
 
     TestWorkflowExecutionCR:
       type: object
@@ -10308,7 +10315,7 @@ components:
         tags:
           $ref: "#/components/schemas/TestWorkflowTagValue"
         target:
-          $ref: "#/components/schemas/TestWorkflowTarget"
+          $ref: "#/components/schemas/ExecutionTarget"
 
     TestWorkflowExecutionTags:
       type: object
