--- a/test/suites/test-workflows/cron/dev/testkube-multiagent-targets-workflow-cron.yaml
+++ b/test/suites/test-workflows/cron/dev/testkube-multiagent-targets-workflow-cron.yaml
@@ -1,7 +1,7 @@
 kind: TestWorkflow
 apiVersion: testworkflows.testkube.io/v1
 metadata:
-  name: tw-suite-small-sandbox-smoke-cron-trigger
+  name: testkube-multiagent-targets-workflow-suite-cron-trigger
   labels:
     core-tests: workflows-suite-trigger
     type: suite-trigger
@@ -9,7 +9,7 @@ spec:
   steps:
   - execute:
       workflows:
-      - name: tw-suite-small-smoke
+      - name: testkube-multiagent-targets-workflow-suite
   events:
   - cronjob:
-      cron: "15 */2 * * *" # every 2 hours
+      cron: "*/50 */4 * * *" # every 4 hours
