fix: hostpid field
Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -10051,6 +10051,8 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/PodResourceClaim"
+        hostPID:
+          $ref: "#/components/schemas/BoxedBoolean"            
 
     TestWorkflowContainerConfig:
       type: object
