test workflows - special cases - oomkilled updated, random oomkilled

--- a/test/special-cases/test-workflows/edge-cases-expected-fails.yaml
+++ b/test/special-cases/test-workflows/edge-cases-expected-fails.yaml
@@ -153,36 +153,30 @@ metadata:
   labels:
     core-tests: expected-fail
 spec:
-  content:
-    git:
-      uri: https://github.com/kubeshop/testkube
-      revision: main
-      paths:
-      - test/cypress/executor-tests/cypress-13
   container:
+    image: python:3.11-slim
     resources:
       limits:
-        cpu: 2
         memory: 50Mi
-    workingDir: /data/repo/test/cypress/executor-tests/cypress-13
   steps:
-  - name: Run tests
-    run:
-      image: cypress/included:13.6.4
-      args:
-      - --env
-      - NON_CYPRESS_ENV=NON_CYPRESS_ENV_value
-      - --config
-      - '{"screenshotsFolder":"/data/artifacts/screenshots","videosFolder":"/data/artifacts/videos"}'
-      env:
-      - name: CYPRESS_CUSTOM_ENV
-        value: CYPRESS_CUSTOM_ENV_value
-    steps:
-    - name: Saving artifacts
-      workingDir: /data/artifacts
-      artifacts:
-        paths:
-        - '**/*'
+  - name: Run test - random OOMKilled
+    shell: bash -c 'python3 -c "a = '\'' '\'' * 10**9"'
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: expected-fail-random-oomkilled
+  labels:
+    core-tests: expected-fail
+spec:
+  container:
+    image: python:3.11-slim
+    resources:
+      limits:
+        memory: 50Mi
+  steps:
+  - name: Run test - random OOMKilled
+    shell: bash -c '[ $(( RANDOM % 2 )) -eq 0 ] && echo "Random - OOMKilled" && python3 -c "a = '\'' '\'' * 10**9" || echo "Random - OK"'
 ---
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
