--- a/test/suites/test-workflows/full-smoke.yaml
+++ b/test/suites/test-workflows/full-smoke.yaml
@@ -20,6 +20,7 @@ spec:
       - name: locust-workflow-suite
       - name: maven-workflow-suite
       - name: nunit-workflow-suite
+      - name: pact-workflow-suite
       - name: playwright-workflow-suite
       - name: postman-workflow-suite
       - name: pytest-workflow-suite
