--- a/test/pact/pact-js-project/crd/smoke.yaml
+++ b/test/pact/pact-js-project/crd/smoke.yaml
@@ -1,7 +1,7 @@
-apiVersion: tests.testkube.io/v3
+apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
 metadata:
-  name: pact-workflow-smoke
+  name: pact-js-workflow-smoke
   labels:
     core-tests: workflows
     tool: pact
@@ -16,7 +16,7 @@ spec:
     image: node:23.11.0
     workingDir: /data/repo/test/pact/pact-js-project
   steps:
-    - name: Install dependencies
-      shell: npm install
-    - name: Run Pact test
-      shell: npm test -- --runInBand
+  - name: Install dependencies
+    shell: "npm install"
+  - name: Run Pact test
+    shell: "npx jest --runInBand"
