--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -5119,6 +5119,40 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/Problem"
+    put:
+      tags:
+        - test-workflows
+        - api
+        - pro
+      summary: Validate test workflow template
+      description: Validate test workflow template specification against CRD schema
+      operationId: validateTestWorkflowTemplate
+      requestBody:
+        description: test workflow template body
+        required: true
+        content:
+          text/yaml:
+            schema:
+              type: string
+      responses:
+        204:
+          description: "no content"
+        400:
+          description: "problem with body parsing - probably some bad input occurs"
+          content:
+            application/problem+json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Problem"
+        502:
+          description: problem communicating with kubernetes cluster
+          content:
+            application/problem+json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Problem"
   /test-workflow-templates/{id}:
     get:
       tags:
